objects/IP_Config__c.object
<CustomObject>
    <fields>
        <fullName>ASIC_Name__c</fullName>
        <label>ASIC Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Head_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Head 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Head_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Head 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COPA_Integration_Id__c</fullName>
        <description>Same contents as like-named field in Entitlement.</description>
        <label>COPA Integration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Name__c</fullName>
        <label>Core Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Databahn_Project__c</fullName>
        <description>Databahn enterprise &amp; project concatenated</description>
        <label>Databahn Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Team_Contact__c</fullName>
        <label>Design Team Contact</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Team_Email__c</fullName>
        <label>Design Team Email</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Team_Location__c</fullName>
        <label>Design Team Location</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Team_Phone__c</fullName>
        <label>Design Team Phone</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_BU_Head_Start__c</fullName>
        <label>IPCA Approval BU Head Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_BU_Head_Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPCA Approval BU Head Total Hours</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Mktg_Start__c</fullName>
        <label>IPCA Approval Mktg Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Mktg_Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPCA Approval Mktg Total Hours</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Opp_Owner_Start__c</fullName>
        <label>IPCA Approval Opp Owner Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Opp_Owner_Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPCA Approval Opp Owner Total Hours</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_R_D_Start__c</fullName>
        <label>IPCA Approval R&amp;D Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_R_D_Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPCA Approval R&amp;D Total Hours</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Start__c</fullName>
        <label>IPCA Approval Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPCA_Approval_Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPCA Approval Total Hours</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Config_ID__c</fullName>
        <displayFormat>IPC-{000000}</displayFormat>
        <label>IP Config ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IP_Prod_Cat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IP Product Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IPCA_Approvers__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>1) Type &quot;All&quot; in the text box
2) Choose &quot;All Fields&quot; from the Search options and click &quot;Go&quot;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IPCA_Approvers__c</referenceTo>
        <relationshipLabel>IP Config Addendums</relationshipLabel>
        <relationshipName>IP_Config_Addendums</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mktg_Head_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mktg Head 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mktg_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mktg Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.Transaction_Type__c</field>
                <operation>equals</operation>
                <value>IP, IP - Tensilica</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>IP Config Addendums</relationshipLabel>
        <relationshipName>IP_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>R_D_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R&amp;D 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_D_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R&amp;D 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_D_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R&amp;D 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>opportunity_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Config_Addendums</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IP Config Addendum</label>
    <listViews>
        <fullName>CQ_Pending_IP_Addendum</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>IP_Prod_Cat__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Core_Name__c</columns>
        <columns>ASIC_Name__c</columns>
        <columns>Databahn_Project__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Maintenance_Start_Date__c</columns>
        <columns>Maintenance_End_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>notContain</operation>
            <value>Cadence</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <label>CY IP Addendum Status</label>
        <language>en_US</language>
        <sharedTo>
            <group>IP_Config_Cadence_Library_2</group>
            <group>Opportunity_IP_Config_BU_Approvers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>IP Config Addendum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Config Addendums</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>